<resources>
    <string name="app_name">Cocktail Machine</string>
    <string name="action_settings">Einstellungen</string>

    <string name="menu_home">Home</string>
    <string name="menu_all_cocktails">Alle Cocktails</string>
    <string name="menu_categories">Kategorien</string>
    <string name="menu_search">Suche</string>
    <string name="menu_test">Test</string>
    <string name="menu_stats">Statistiken</string>
    <string name="menu_settings">Einstellungen</string>

</resources>