<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_all_cocktails"
            android:icon="@drawable/cocktail"
            android:title="@string/menu_all_cocktails" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_baseline_category_24"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/stats"
            android:title="@string/menu_stats" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />

    </group>
</menu>